# jetson-openclaw-setup

./: CHANGELOG.md  README.md
.github/workflows/: README.md  auto-deploy.yml  brain-server-ci.yml  code-quality.yml  dependencies.yml  production-ready.yml  release-multi-arch.yml  release-with-debian.yml  release.yml  signal-gateway-ci.yml
.gnupg/: trustdb.gpg
.openclaw/workspace/brain-rs/: BRAIN_TECH_SPECS.md  Cargo.toml  Cargo.toml.backup_20260215_181022  GRACEFUL_SHUTDOWN_FIX.md  MIGRATION.md  QUICKREF.md  README.md  SHUTDOWN_HANG_ANALYSIS.md  SPEC.md  brain-server-fixed.rs  build.sh  fix_comment.py  ingest_gutmindsynergy_posts.sh  main.rs  test.sh
.openclaw/workspace/brain-rs/.cargo/: config.toml
.openclaw/workspace/brain-rs/src/: main.rs  main.rs.backup_v0.6.4_20260215_181022  main.rs.backup_v0.7.3  main.rs.broken  main.rs.patch
.ssh/: authorized_keys  authorized_keys.backup.20260215_123433  config  config.minimal-backup  id_ed25519_20251103  id_ed25519_20251103.pub  known_hosts.old
docs/: CODING_FACTORY.md
scripts/: git-check.sh  git-feature.sh  git-sync.sh  signal-gateway-wrapper.sh
services/brain-server/: Cargo.toml  README.md
services/signal-gateway/: Cargo.toml  README.md  TODO.md  WEBHOOK_IMPLEMENTATION.md  config.yaml
workspace/: .gitignore  AGENTS.md  HEARTBEAT.md
workspace/memory/: 2026-02-08.md  2026-02-10.md  2026-02-11-brain-integration.md  2026-02-11-cron-setup.md  2026-02-11.md  2026-02-12-supplements.md  2026-02-12.md  2026-02-13.md  2026-02-16-cron-failure-analysis.md  2026-02-16-hourly-brain-update-schedule.md  2026-02-18.md  (+7 more)
(+18 files in other folders)
